refactor: adjust everything again
